--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,6 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.alexconstantin.jrs.MapsActivity" />
+        tools:context="com.example.alexconstantin.jrs.MapViewFragment" />
 
 </android.support.constraint.ConstraintLayout>
