--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,13 +3,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_map"
             android:title="Hartă" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Obiective" />
+            android:icon="@drawable/ic_objective"
+            android:title="Tipuri de obiective" />
     </group>
 
 </menu>
