--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_objective"
-            android:title="Tipuri de obiective" />
+            android:title="Filtrare obiective" />
     </group>
 
 </menu>
