--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -3,7 +3,8 @@
     <SwitchPreference
         android:defaultValue="true"
         android:key="example_switch"
-        android:title="Titlu1" />
+        android:title="Titlu1"
+        android:id="@+id/elem1"/>
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
