--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -4,7 +4,7 @@
 
     <header
         android:fragment="com.example.alexconstantin.jrs.ChooseObjectiveType$GeneralPreferenceFragment"
-        android:icon="@drawable/ic_info_black_24dp"
+        android:icon="@drawable/ic_objective"
         android:title="@string/pref_header_general" />
 
 </preference-headers>
