add back button

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.alexconstantin.jrs.MainActivity">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_map"
-            android:icon="@drawable/ic_map"
-            android:title="Hartă" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_objective"
-            android:title="Filtrare obiective" />
-        <item
-            android:id="@+id/nav_language"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Schimbă limba" />
-    </group>
+    <item
+        android:id="@+id/navigation_language"
+        android:title=""
+        app:actionLayout="@layout/spinner" />
 
 </menu>
