--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,10 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <include layout="@layout/activity_maps"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
+
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
