--- a/app/src/main/res/layout/language_item.xml
+++ b/app/src/main/res/layout/language_item.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="80px"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.alexconstantin.jrs.MainActivity"
+    >
 
     <TextView
         android:id="@+id/id"
@@ -15,5 +18,6 @@
     <RadioButton android:id="@+id/keyName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:onClick="selectLanguage()"/>
 </LinearLayout>
