change navmenu layout

--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -4,4 +4,5 @@ android:id="@+id/spinner"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_gravity="center_vertical"
+android:textAlignment="textEnd"
 android:gravity="center_vertical" />
